myCompilerproject/ptucc_parser.output
State 55 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program_decl program_function_procedure_start_contents complex_commands DEL_DOT

    2 program_decl: KW_PROGRAM IDENT DEL_SEMICOLON

    3 program_function_procedure_start_contents: %empty
    4                                          | program_function_procedure_start_contents variable_declaration
    5                                          | program_function_procedure_start_contents typedef_declaration
    6                                          | program_function_procedure_start_contents function
    7                                          | program_function_procedure_start_contents procedure

    8 function: function_header function_procedure_start_contents function_complex_commands DEL_SEMICOLON

    9 function_procedure_start_contents: %empty
   10                                  | function_procedure_start_contents variable_declaration
   11                                  | function_procedure_start_contents function
   12                                  | function_procedure_start_contents procedure

   13 function_header: KW_FUNCTION IDENT DEL_LEFTPAR function_procedure_param DEL_RIGHTPAR DEL_COLON data_types DEL_SEMICOLON

   14 procedure: procedure_header function_procedure_start_contents complex_commands DEL_SEMICOLON

   15 procedure_header: KW_PROCEDURE IDENT DEL_LEFTPAR function_procedure_param DEL_RIGHTPAR DEL_SEMICOLON

   16 function_procedure_param: %empty
   17                         | IDENT DEL_COLON basic_data_types
   18                         | IDENT DEL_COLON KW_ARRAY array_size_declaration KW_OF basic_data_types
   19                         | IDENT DEL_COLON KW_ARRAY KW_OF basic_data_types
   20                         | IDENT DEL_COLON IDENT
   21                         | function_procedure_param DEL_SEMICOLON IDENT DEL_COLON basic_data_types
   22                         | function_procedure_param DEL_SEMICOLON IDENT DEL_COLON KW_ARRAY array_size_declaration KW_OF basic_data_types
   23                         | function_procedure_param DEL_SEMICOLON IDENT DEL_COLON KW_ARRAY KW_OF basic_data_types
   24                         | function_procedure_param DEL_SEMICOLON IDENT DEL_COLON IDENT

   25 function_procedure_call: IDENT DEL_LEFTPAR function_procedure_call_params DEL_RIGHTPAR

   26 function_procedure_call_params: %empty
   27                               | expressions
   28                               | function_procedure_call_params DEL_COMMA expressions

   29 basic_data_types: KW_INTEGER
   30                 | KW_BOOL
   31                 | KW_CHAR
   32                 | KW_REAL

   33 data_types: basic_data_types
   34           | KW_ARRAY KW_OF basic_data_types

   35 array_size_declaration: DEL_SQRLEFT POSINT DEL_SQRRIGHT
   36                       | array_size_declaration DEL_SQRLEFT POSINT DEL_SQRRIGHT

   37 typedef_declaration: KW_TYPE
   38                    | typedef_declaration IDENT CMP_EQUAL basic_data_types DEL_SEMICOLON
   39                    | typedef_declaration IDENT CMP_EQUAL KW_FUNCTION DEL_LEFTPAR function_procedure_param DEL_RIGHTPAR DEL_COLON basic_data_types DEL_SEMICOLON
   40                    | typedef_declaration IDENT CMP_EQUAL KW_ARRAY array_size_declaration KW_OF basic_data_types DEL_SEMICOLON
   41                    | typedef_declaration IDENT CMP_EQUAL KW_ARRAY KW_OF basic_data_types DEL_SEMICOLON

   42 variable_declaration: KW_VAR
   43                     | variable_declaration single_plural_ident DEL_COLON basic_data_types DEL_SEMICOLON
   44                     | variable_declaration single_plural_ident DEL_COLON IDENT DEL_SEMICOLON
   45                     | variable_declaration single_plural_ident DEL_COLON KW_ARRAY array_size_declaration KW_OF basic_data_types DEL_SEMICOLON
   46                     | variable_declaration single_plural_ident DEL_COLON KW_ARRAY KW_OF basic_data_types DEL_SEMICOLON

   47 single_plural_ident: single_plural_ident DEL_COMMA IDENT
   48                    | IDENT

   49 read_string: FUNC_RDSTR DEL_LEFTPAR DEL_RIGHTPAR

   50 read_integer: FUNC_RDINT DEL_LEFTPAR DEL_RIGHTPAR

   51 read_real: FUNC_RDREAL DEL_LEFTPAR DEL_RIGHTPAR

   52 write_string: FUNC_WRSTR DEL_LEFTPAR IDENT DEL_RIGHTPAR
   53             | FUNC_WRSTR DEL_LEFTPAR STRING DEL_RIGHTPAR
   54             | FUNC_WRSTR DEL_LEFTPAR KW_RESULT DEL_RIGHTPAR

   55 write_integer: FUNC_WRINT DEL_LEFTPAR expressions DEL_RIGHTPAR
   56              | FUNC_WRINT DEL_LEFTPAR KW_RESULT DEL_RIGHTPAR

   57 write_real: FUNC_WRREAL DEL_LEFTPAR expressions DEL_RIGHTPAR
   58           | FUNC_WRREAL DEL_LEFTPAR KW_RESULT DEL_RIGHTPAR

   59 expressions: IDENT
   60            | POSINT
   61            | REAL
   62            | STRING
   63            | BOOL_TRUE
   64            | BOOL_FALSE
   65            | read_string
   66            | read_integer
   67            | read_real
   68            | array_expression
   69            | function_procedure_call
   70            | KW_NOT expressions
   71            | LOG_NOT expressions
   72            | OP_PLUS expressions
   73            | OP_MINUS expressions
   74            | casting expressions
   75            | expressions OP_MULT expressions
   76            | expressions OP_DIV expressions
   77            | expressions KW_DIV expressions
   78            | expressions KW_MOD expressions
   79            | expressions OP_PLUS expressions
   80            | expressions OP_MINUS expressions
   81            | expressions CMP_EQUAL expressions
   82            | expressions CMP_NOTEQUAL expressions
   83            | expressions CMP_LESS expressions
   84            | expressions CMP_LESSEQUAL expressions
   85            | expressions CMP_GREATER expressions
   86            | expressions CMP_GREATEREQUAL expressions
   87            | expressions KW_AND expressions
   88            | expressions LOG_AND expressions
   89            | expressions KW_OR expressions
   90            | expressions LOG_OR expressions
   91            | DEL_LEFTPAR expressions DEL_RIGHTPAR

   92 complex_command_content: %empty
   93                        | complex_command_content distinct_commands
   94                        | complex_command_content DEL_SEMICOLON distinct_commands

   95 complex_commands: KW_BEGIN complex_command_content KW_END

   96 function_complex_commands: KW_BEGIN complex_command_content DEL_SEMICOLON KW_RETURN KW_END

   97 distinct_commands: assignment_command
   98                  | result_command
   99                  | if_command
  100                  | for_command
  101                  | while_command
  102                  | repeat_command
  103                  | label_command
  104                  | goto_command
  105                  | return_command
  106                  | function_procedure_call
  107                  | read_string
  108                  | read_integer
  109                  | read_real
  110                  | write_string
  111                  | write_integer
  112                  | write_real

  113 statement_commands_contents: distinct_commands
  114                            | complex_commands

  115 assignment_command: IDENT ASSIGNMENT expressions
  116                   | IDENT array_sqr_content ASSIGNMENT expressions

  117 result_command: KW_RESULT ASSIGNMENT expressions

  118 if_command: KW_IF expressions KW_THEN statement_commands_contents
  119           | if_command KW_ELSE statement_commands_contents

  120 for_command: KW_FOR IDENT ASSIGNMENT expressions KW_TO expressions KW_DO statement_commands_contents
  121            | KW_FOR IDENT ASSIGNMENT expressions KW_DOWNTO expressions KW_DO statement_commands_contents

  122 while_command: KW_WHILE expressions KW_DO statement_commands_contents

  123 repeat_command: KW_REPEAT statement_commands_contents KW_UNTIL expressions

  124 label_command: IDENT DEL_COLON statement_commands_contents

  125 goto_command: KW_GOTO IDENT

  126 return_command: KW_RETURN

  127 array_expression: IDENT array_sqr_content

  128 array_sqr_content: DEL_SQRLEFT expressions DEL_SQRRIGHT
  129                  | array_sqr_content DEL_SQRLEFT expressions DEL_SQRRIGHT

  130 casting: DEL_LEFTPAR data_types DEL_RIGHTPAR


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENT (258) 2 13 15 17 18 19 20 21 22 23 24 25 38 39 40 41 44 47 48
    52 59 115 116 120 121 124 125 127
POSINT (259) 35 36 60
REAL (260) 61
STRING (261) 53 62
KW_PROGRAM (262) 2
KW_BEGIN (263) 95 96
KW_END (264) 95 96
KW_AND (265) 87
KW_ARRAY (266) 18 19 22 23 34 40 41 45 46
KW_BOOL (267) 30
KW_CHAR (268) 31
KW_TYPE (269) 37
KW_DIV (270) 77
KW_DO (271) 120 121 122
KW_FOR (272) 120 121
KW_FUNCTION (273) 13 39
KW_GOTO (274) 125
KW_IF (275) 118
KW_INTEGER (276) 29
KW_VAR (277) 42
KW_MOD (278) 78
KW_NOT (279) 70
KW_OF (280) 18 19 22 23 34 40 41 45 46
KW_OR (281) 89
KW_WHILE (282) 122
KW_PROCEDURE (283) 15
KW_REAL (284) 32
KW_REPEAT (285) 123
KW_TO (286) 120
KW_RESULT (287) 54 56 58 117
KW_RETURN (288) 96 126
KW_THEN (289) 118
KW_ELSE (290) 119
KW_UNTIL (291) 123
KW_DOWNTO (292) 121
OP_PLUS (293) 72 79
OP_MINUS (294) 73 80
OP_MULT (295) 75
OP_DIV (296) 76
CMP_EQUAL (297) 38 39 40 41 81
CMP_NOTEQUAL (298) 82
CMP_LESS (299) 83
CMP_LESSEQUAL (300) 84
CMP_GREATER (301) 85
CMP_GREATEREQUAL (302) 86
LOG_AND (303) 88
LOG_NOT (304) 71
LOG_OR (305) 90
ASSIGNMENT (306) 115 116 117 120 121
DEL_SEMICOLON (307) 2 8 13 14 15 21 22 23 24 38 39 40 41 43 44 45 46
    94 96
DEL_LEFTPAR (308) 13 15 25 39 49 50 51 52 53 54 55 56 57 58 91 130
DEL_RIGHTPAR (309) 13 15 25 39 49 50 51 52 53 54 55 56 57 58 91 130
DEL_COMMA (310) 28 47
DEL_SQRLEFT (311) 35 36 128 129
DEL_SQRRIGHT (312) 35 36 128 129
DEL_COLON (313) 13 17 18 19 20 21 22 23 24 39 43 44 45 46 124
DEL_DOT (314) 1
FUNC_RDSTR (315) 49
FUNC_RDINT (316) 50
FUNC_RDREAL (317) 51
FUNC_WRSTR (318) 52 53 54
FUNC_WRINT (319) 55 56
FUNC_WRREAL (320) 57 58
BOOL_TRUE (321) 63
BOOL_FALSE (322) 64
NOT (323)
UPLUS_UMINUS (324)
CAST (325)
FACTORS (326)
PLUS_MINUS (327)
RELATIONAL (328)
LOGICAL_AND (329)
LOGICAL_OR (330)
PAR (331)


Nonterminals, with rules where they appear

$accept (77)
    on left: 0
program (78)
    on left: 1, on right: 0
program_decl (79)
    on left: 2, on right: 1
program_function_procedure_start_contents (80)
    on left: 3 4 5 6 7, on right: 1 4 5 6 7
function (81)
    on left: 8, on right: 6 11
function_procedure_start_contents (82)
    on left: 9 10 11 12, on right: 8 10 11 12 14
function_header (83)
    on left: 13, on right: 8
procedure (84)
    on left: 14, on right: 7 12
procedure_header (85)
    on left: 15, on right: 14
function_procedure_param (86)
    on left: 16 17 18 19 20 21 22 23 24, on right: 13 15 21 22 23 24
    39
function_procedure_call (87)
    on left: 25, on right: 69 106
function_procedure_call_params (88)
    on left: 26 27 28, on right: 25 28
basic_data_types (89)
    on left: 29 30 31 32, on right: 17 18 19 21 22 23 33 34 38 39 40
    41 43 45 46
data_types (90)
    on left: 33 34, on right: 13 130
array_size_declaration (91)
    on left: 35 36, on right: 18 22 36 40 45
typedef_declaration (92)
    on left: 37 38 39 40 41, on right: 5 38 39 40 41
variable_declaration (93)
    on left: 42 43 44 45 46, on right: 4 10 43 44 45 46
single_plural_ident (94)
    on left: 47 48, on right: 43 44 45 46 47
read_string (95)
    on left: 49, on right: 65 107
read_integer (96)
    on left: 50, on right: 66 108
read_real (97)
    on left: 51, on right: 67 109
write_string (98)
    on left: 52 53 54, on right: 110
write_integer (99)
    on left: 55 56, on right: 111
write_real (100)
    on left: 57 58, on right: 112
expressions (101)
    on left: 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
    77 78 79 80 81 82 83 84 85 86 87 88 89 90 91, on right: 27 28 55
    57 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89
    90 91 115 116 117 118 120 121 122 123 128 129
complex_command_content (102)
    on left: 92 93 94, on right: 93 94 95 96
complex_commands (103)
    on left: 95, on right: 1 14 114
function_complex_commands (104)
    on left: 96, on right: 8
distinct_commands (105)
    on left: 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111
    112, on right: 93 94 113
statement_commands_contents (106)
    on left: 113 114, on right: 118 119 120 121 122 123 124
assignment_command (107)
    on left: 115 116, on right: 97
result_command (108)
    on left: 117, on right: 98
if_command (109)
    on left: 118 119, on right: 99 119
for_command (110)
    on left: 120 121, on right: 100
while_command (111)
    on left: 122, on right: 101
repeat_command (112)
    on left: 123, on right: 102
label_command (113)
    on left: 124, on right: 103
goto_command (114)
    on left: 125, on right: 104
return_command (115)
    on left: 126, on right: 105
array_expression (116)
    on left: 127, on right: 68
array_sqr_content (117)
    on left: 128 129, on right: 116 127 129
casting (118)
    on left: 130, on right: 74


State 0

    0 $accept: . program $end

    KW_PROGRAM  shift, and go to state 1

    program       go to state 2
    program_decl  go to state 3


State 1

    2 program_decl: KW_PROGRAM . IDENT DEL_SEMICOLON

    IDENT  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: program_decl . program_function_procedure_start_contents complex_commands DEL_DOT

    $default  reduce using rule 3 (program_function_procedure_start_contents)

    program_function_procedure_start_contents  go to state 6


State 4

    2 program_decl: KW_PROGRAM IDENT . DEL_SEMICOLON

    DEL_SEMICOLON  shift, and go to state 7


State 5

    0 $accept: program $end .

    $default  accept


State 6

    1 program: program_decl program_function_procedure_start_contents . complex_commands DEL_DOT
    4 program_function_procedure_start_contents: program_function_procedure_start_contents . variable_declaration
    5                                          | program_function_procedure_start_contents . typedef_declaration
    6                                          | program_function_procedure_start_contents . function
    7                                          | program_function_procedure_start_contents . procedure

    KW_BEGIN      shift, and go to state 8
    KW_TYPE       shift, and go to state 9
    KW_FUNCTION   shift, and go to state 10
    KW_VAR        shift, and go to state 11
    KW_PROCEDURE  shift, and go to state 12

    function              go to state 13
    function_header       go to state 14
    procedure             go to state 15
    procedure_header      go to state 16
    typedef_declaration   go to state 17
    variable_declaration  go to state 18
    complex_commands      go to state 19


State 7

    2 program_decl: KW_PROGRAM IDENT DEL_SEMICOLON .

    $default  reduce using rule 2 (program_decl)


State 8

   95 complex_commands: KW_BEGIN . complex_command_content KW_END

    $default  reduce using rule 92 (complex_command_content)

    complex_command_content  go to state 20


State 9

   37 typedef_declaration: KW_TYPE .

    $default  reduce using rule 37 (typedef_declaration)


State 10

   13 function_header: KW_FUNCTION . IDENT DEL_LEFTPAR function_procedure_param DEL_RIGHTPAR DEL_COLON data_types DEL_SEMICOLON

    IDENT  shift, and go to state 21


State 11

   42 variable_declaration: KW_VAR .

    $default  reduce using rule 42 (variable_declaration)


State 12

   15 procedure_header: KW_PROCEDURE . IDENT DEL_LEFTPAR function_procedure_param DEL_RIGHTPAR DEL_SEMICOLON

    IDENT  shift, and go to state 22


State 13

    6 program_function_procedure_start_contents: program_function_procedure_start_contents function .

    $default  reduce using rule 6 (program_function_procedure_start_contents)


State 14

    8 function: function_header . function_procedure_start_contents function_complex_commands DEL_SEMICOLON

    $default  reduce using rule 9 (function_procedure_start_contents)

    function_procedure_start_contents  go to state 23


State 15

    7 program_function_procedure_start_contents: program_function_procedure_start_contents procedure .

    $default  reduce using rule 7 (program_function_procedure_start_contents)


State 16
